Completed first tutorial
https://www.youtube.com/watch?v=JMmUW4d3Noc

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # MacOS
 .DS_Store
 
+# WebStorm stuff
 .idea/
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
